added tasks screens

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vue-wysiwyg": "^1.7.2",
