--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^12.1.0",
+    "@ckeditor/ckeditor5-vue": "^1.0.0-beta.2",
     "moment": "^2.24.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
-    "vue-wysiwyg": "^1.7.2",
     "vuejs-datepicker": "^1.5.4",
     "vuex": "^3.0.1"
   },
