--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^12.1.0",
-    "@ckeditor/ckeditor5-vue": "^1.0.0-beta.2",
+    "@tinymce/tinymce-vue": "^2.0.0",
     "moment": "^2.24.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
